k8s/mysql-config.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-set
spec:
  selector:
    matchLabels:
      app: "mysql"
  serviceName: "mysql-service"
  replicas: 2
  template:
    metadata:
      labels:
        app: "mysql"
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mysql
        image: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-store
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-store
    spec:
      storageClassName: fast-storageclass
      volumeMode: Filesystem
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 5Gi


---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service 
  labels:
    app: mysql
spec:
  type: LoadBalancer
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql
