k8s/fastapi-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      volumes:
        - name: images-volume
          persistentVolumeClaim:
            claimName: images-volume
      containers:
      - name: backend
        image: banderosik/banderachat-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts:
          - name: images-volume
            mountPath: /app/media
---

apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  ports:
    - name: "backend"
      port: 8000
  selector:
    app: backend

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  annotations:
    dev.okteto.com/generate-host: backend
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: backend
                port:
                  number: 8000
            path: /
            pathType: ImplementationSpecific
